--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   </head>
   <body>
     <div class="card">
-      <div class="card__user"></div>
-
-      <div class="card__text">
-        <p>Turn it up daily on MTN Pulse</p>
-        <p>Dail *406# to join</p>
+      <div class="card-image">
+        <img src="./img/img.png" alt="" height="100%" width="50%" />
+      </div>
+      <div class="card-text">
+        <p>Turn it up daily on</p>
+        <span class="value">MTN Pulse</span>
       </div>
     </div>
   </body>
