--- a/index.html
+++ b/index.html
@@ -8,13 +8,7 @@
   </head>
   <body>
     <div class="card">
-      <div class="card-image">
-        <img src="./img/img.png" alt="" height="100%" width="50%" />
-      </div>
-      <div class="card-text">
-        <p>Turn it up daily on</p>
-        <span class="value">MTN Pulse</span>
-      </div>
+      <div class="card-image"></div>
     </div>
   </body>
 </html>
