--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="card">
-      <div class="card-image"></div>
-    </div>
+      <img src="./img/mtn.jpeg" alt="">
+      
   </body>
 </html>
