added new feature

--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@
   </head>
   <body>
     <div class="card">
-      <img src="./img/mtn.jpeg" alt="">
-      
+      <div class="card-content">
+        <div class="card-logo">
+          <img src="./img/logo.png" alt="" class="card-logo-img" />
+        </div>
+
+        <div class="card-text">
+          <h2>MTN Nigeria</h2>
+          <h3>@MTNNG</h3>
+          <p>Why blend in when you can stand out?</p>
+          <p>Break free,express yourself the way you want with MTN iPulse.</p>
+        </div>
+      </div>
+
+      <div class="card-image">
+        <img src="./img/mtn.jpeg" alt="" />
+      </div>
+    </div>
   </body>
 </html>
